--- a/src/main/webapp/home.css
+++ b/src/main/webapp/home.css
@@ -1,7 +1,5 @@
-*
-{
-  box-sizing: border-box;
-}
+@charset "ISO-8859-1";
+
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -9,7 +7,7 @@ body {
 
 /* Style the header */
 header {
-  background-color: #666;
+  background-color: green;
   padding: 30px;
   text-align: center;
   font-size: 35px;
@@ -21,7 +19,6 @@ article {
   float: left;
   padding: 20px;
   width: 100%;
-  background-color: #f1f1f1;
   height: 300px; /* only for demonstration, should be removed */
 }
 
@@ -72,4 +69,18 @@ footer {
 .topnav a.active {
   background-color: #4CAF50;
   color: white;
+}
+#logout {
+float: right;
+}
+
+.stop-btn {
+width: 100%;
+background-color: #77C643;
+color: white;
+padding: 14px 20px;
+margin: 8px 0;
+border: none;
+border-radius: 4px;
+cursor: pointer;
 }
